--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -15,9 +15,7 @@ kafka_broker_id=0
 postgresql_replication_slots=['standby','spare']
 hot_standby_server='172.19.4.36'
 
-#[echis_server2:vars]
-elasticsearch_node_name=es2
-kafka_broker_id=2
+[echis_server2:vars]
 
 [echis_server2]
 172.19.4.33 hostname="echis2"
@@ -75,7 +73,8 @@ echis_server3
 echis_server0
 echis_server1
 echis_server3
-#echis_server6
+echis_server6
+
 # nginx
 [couchdb2_proxy:children]
 echis_server0
@@ -84,10 +83,10 @@ echis_server0
 echis_server1
 
 [zookeeper:children]
-echis_server1
+echis_server0
 
 [kafka:children]
-echis_server1
+#echis_server1
 echis_server0
 echis_server3
 
