--- a/environments/echis/app-processes.yml
+++ b/environments/echis/app-processes.yml
@@ -20,46 +20,47 @@ celery_processes:
     beat: {}
     flower: {}
     export_download_queue:
-      concurrency: 5
+      concurrency: 100
+      num_workers: 2
     email_queue:
       pooling: gevent
       concurrency: 100
       num_workers: 2
     case_import_queue:
-      concurrency: 4
+      concurrency: 10
     celery:
-      concurrency: 4
+      concurrency: 10
     background_queue:
-      concurrency: 8
+      concurrency: 10
     case_rule_queue:
-      concurrency: 4
+      concurrency: 10
     analytics_queue:
       pooling: gevent
       concurrency: 10
     celery_periodic:
-      concurrency: 1
+      concurrency: 10
     saved_exports_queue:
-      concurrency: 1
+      concurrency: 10
       optimize: True
     submission_reprocessing_queue:
-      concurrency: 1
+      concurrency: 10
     reminder_case_update_queue:
       pooling: gevent
-      concurrency: 1
+      concurrency: 10
     reminder_queue:
       pooling: gevent
-      concurrency: 1
+      concurrency: 10
     reminder_rule_queue:
-      concurrency: 3
+      concurrency: 10
     ucr_queue:
-      concurrency: 4
+      concurrency: 10
     ucr_indicator_queue:
-      concurrency: 2
+      concurrency: 10
     sms_queue:
       pooling: gevent
       concurrency: 1
     async_restore_queue:
-      concurrency: 8
+      concurrency: 10
     repeat_record_queue:
       pooling: gevent
       concurrency: 10
@@ -68,7 +69,7 @@ celery_processes:
     logistics_background_queue:
       concurrency: 2
     send_report_throttled:
-      concurrency: 2
+      concurrency: 50
     sumologic_logs_queue:
       pooling: gevent
       concurrency: 50
@@ -82,21 +83,21 @@ pillows:
     group-pillow:
       num_processes: 5
     SqlSMSPillow:
-      num_processes: 1
+      num_processes: 5
     UnknownUsersPillow:
       num_processes: 2
     UpdateUserSyncHistoryPillow:
-      num_processes: 1
+      num_processes: 5
     UserCacheInvalidatePillow:
-      num_processes: 2
+      num_processes: 5
     UserGroupsDbKafkaPillow:
-      num_processes: 2
+      num_processes: 5
     user-pillow:
       num_processes: 5
     AppDbChangeFeedPillow:
       num_processes: 10
     ApplicationToElasticsearchPillow:
-      num_processes: 3
+      num_processes: 5
     DomainDbKafkaPillow:
       num_processes: 10
     KafkaDomainPillow:
@@ -108,4 +109,4 @@ pillows:
     xform-pillow:
       num_processes: 12
     LedgerToElasticsearchPillow:
-      num_processes: 1
+      num_processes: 5
