redis and rabbitmq host machine changed

--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -34,10 +34,10 @@ replication_slot = 'standby'
 [echis_server4]
 172.19.4.37 hostname="echis4"
 
-[echis_server5:vars]
+#[echis_server5:vars]
 
-[echis_server5]
-172.19.4.35 hostname="echis5"
+#[echis_server5]
+#172.19.4.35 hostname="echis5"
 
 [echis_server6]
 172.19.4.41 hostname="echis6"
@@ -80,7 +80,7 @@ echis_server6
 echis_server0
 
 [redis:children]
-echis_server1
+echis_server2
 
 [zookeeper:children]
 echis_server0
@@ -91,7 +91,7 @@ echis_server0
 echis_server3
 
 [rabbitmq:children]
-echis_server7
+echis_server2
 
 # background tasks
 [celery:children]
