--- a/src/commcare_cloud/ansible/requirements.yml
+++ b/src/commcare_cloud/ansible/requirements.yml
@@ -12,7 +12,7 @@ roles:
     name: ansible-logrotate
   - src: DavidWittman.redis
     version: 1.2.7
-  - src: sansible.logstash
+  - src: ansible.logstash
     version: v2.4.0-latest
   - src: geerlingguy.filebeat
     version: 3.0.2  
