New host(172.19.4.40) added to echis kafka machine added to host echis_server2

--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -16,6 +16,7 @@ postgresql_replication_slots=['standby','spare']
 hot_standby_server='172.19.4.36'
 
 [echis_server2:vars]
+kafka_broker_id=3
 
 [echis_server2]
 172.19.4.33 hostname="echis2"
@@ -34,10 +35,10 @@ replication_slot = 'standby'
 [echis_server4]
 172.19.4.37 hostname="echis4"
 
-#[echis_server5:vars]
+[echis_server5:vars]
 
-#[echis_server5]
-#172.19.4.35 hostname="echis5"
+[echis_server5]
+172.19.4.35 hostname="echis5"
 
 [echis_server6]
 172.19.4.41 hostname="echis6"
@@ -49,6 +50,9 @@ replication_slot = 'standby'
 
 [echis_server8]
 172.19.4.43 hostname="echis8"
+
+[echis_server9]
+172.19.4.40 hostname="echis9"
 
 [minio:children]
 #echis_server3
@@ -89,6 +93,7 @@ echis_server0
 echis_server1
 echis_server0
 echis_server3
+echis_server2
 
 [rabbitmq:children]
 echis_server2
