local changes on app process

--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -48,17 +48,21 @@ replication_slot = 'standby'
 [echis_server7]
 172.19.4.42 hostname="echis7"
 
+[echis_server8:vars]
+
 [echis_server8]
 172.19.4.43 hostname="echis8"
+
+[echis_server9:vars]
 
 [echis_server9]
 172.19.4.40 hostname="echis9"
 
 [minio:children]
-#echis_server3
+#echis_server4
 #echis_server6
-#echis_server7
 echis_server8
+#echis_server9
 
 
 [proxy:children]
