covid environment added postgresql configuration: standby server removed and working

--- a/environments/covid/inventory.ini
+++ b/environments/covid/inventory.ini
@@ -3,9 +3,9 @@
 
 [echis_server0:vars]
 public_ip=52.6.236.108
-kafka_broker_id=1
 elasticsearch_node_name=es0
-hot_standby_master='172.31.95.249'
+#hot_standby_master='172.31.95.249'
+#replication_slot='standby'
 
 [echis_server1]
 172.31.95.249 hostname="covid1"
@@ -13,8 +13,8 @@ hot_standby_master='172.31.95.249'
 [echis_server1:vars]
 elasticsearch_node_name=es1
 kafka_broker_id=0
-postgresql_replication_slots=['standby','spare']
-#hot_standby_server='172.19.4.36'
+#postgresql_replication_slots=['standby','spare']
+#hot_standby_server='172.31.85.158'
 
 [echis_server2:vars]
 
