minio added instead of shared_drive

--- a/environments/covid/inventory.ini
+++ b/environments/covid/inventory.ini
@@ -4,8 +4,6 @@
 [echis_server0:vars]
 public_ip=52.6.236.108
 elasticsearch_node_name=es0
-#hot_standby_master='172.31.95.249'
-#replication_slot='standby'
 
 [echis_server1]
 172.31.95.249 hostname="covid1"
@@ -13,8 +11,6 @@ elasticsearch_node_name=es0
 [echis_server1:vars]
 elasticsearch_node_name=es1
 kafka_broker_id=0
-#postgresql_replication_slots=['standby','spare']
-#hot_standby_server='172.31.85.158'
 
 [echis_server2:vars]
 
@@ -27,7 +23,7 @@ kafka_broker_id=0
 172.31.80.228 hostname="covid3"
 
 [minio:children]
-echis_server2
+#echis_server2
 
 [proxy:children]
 echis_server0
@@ -59,7 +55,7 @@ echis_server1
 echis_server1
 
 [rabbitmq:children]
-echis_server3
+echis_server0
 
 # background tasks
 [celery:children]
